@@ -39,14 +39,14 @@ actual fetching.
 a list of key/value pairs suitable for \fBarray set\fR containing
 the constituents of the \fIurl\fR. If the scheme is missing from the
 url it defaults to \fBhttp\fR. Currently only the schemes
-\fBhttp\fR, \fBftp\fR, \fBmailto\fR and \fBfile\fR are
+\fBhttp\fR, \fBftp\fR, \fBmailto\fR, \fBurn\fR and \fBfile\fR are
 supported. See section EXTENDING on how to expand that range.
 .PP
 \fBuri::join\fR takes a list of key/value pairs (generated by
 \fBuri::split\fR, for example) and returns the canonical url they
 represent. Currently only the schemes \fBhttp\fR, \fBftp\fR,
-\fBmailto\fR and \fBfile\fR are supported. See section EXTENDING
-on how to expand that range.
+\fBmailto\fR, \fBurn\fR and \fBfile\fR are supported. See section 
+EXTENDING on how to expand that range.
 .PP
 \fBuri::isrelative\fR determines whether the specified \fIurl\fR is
 absolute or relative.
