@@ -6,7 +6,7 @@
 #
 # Copyright (c) 2000 by Zveno Pty Ltd.
 #
-# RCS: @(#) $Id: uri.test,v 1.7 2001/10/31 16:39:53 patthoyts Exp $
+# RCS: @(#) $Id: uri.test,v 1.8 2001/10/31 23:54:12 patthoyts Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -27,82 +27,138 @@ proc kvsort args {
     return $result
 }
 
+# -------------------------------------------------------------------------
+# Split tests
+
 test uri-1.1 {uri::split - http w/- query} {
     eval kvsort [uri::split http://test.net/path/path2?query]
 } {host test.net path path/path2 port {} query query scheme http}
+
 test uri-1.2 {uri::split - https w/- query} {
     eval kvsort [uri::split https://test.net/path/path2?query]
 } {host test.net path path/path2 port {} query query scheme https}
+
 test uri-1.3 {uri::split - http w/- port} {
     eval kvsort [uri::split http://test.net:8080]
 } {host test.net path {} port 8080 query {} scheme http}
+
 test uri-1.4 {uri::split - https w/- port} {
     eval kvsort [uri::split https://test.net:8888]
 } {host test.net path {} port 8888 query {} scheme https}
+
 test uri-1.5 {uri::split - ftp} {
     eval kvsort [uri::split ftp://ftp.test.net/path/to/resource]
 } {host ftp.test.net path path/to/resource port {} pwd {} scheme ftp type {} user {}}
+
 test uri-1.6 {uri::split - ftp with userinfo} {
-    eval kvsort [uri::split {ftp://user:passwd@localhost:1/filename}]
-} {host localhost path filename port 1 pwd passwd scheme ftp type {} user user}
+    eval kvsort [uri::split {ftp://user:passwd@localhost/a/b/c.d}]
+} {host localhost path a/b/c.d port {} pwd passwd scheme ftp type {} user user}
+
+test uri-1.7 {uri::split - ftp with type} {
+    eval kvsort [uri::split {ftp://localhost/a/b/c.d;type=i}]
+} {host localhost path a/b/c.d port {} pwd {} scheme ftp type i user {}}
+
+test uri-1.8 {uri::split - ftp with port} {
+    eval kvsort [uri::split {ftp://localhost:21/a/b/c.d}]
+} {host localhost path a/b/c.d port 21 pwd {} scheme ftp type {} user {}}
+
+# -------------------------------------------------------------------------
 
 test uri-2.1 {uri::join - http} {
     uri::join scheme http path / host www.w3.org
 } http://www.w3.org/
+
 test uri-2.2 {uri::join - https} {
     uri::join scheme https path / host www.w3.org
 } https://www.w3.org/
+
 test uri-2.3 {uri::join - http w/- query} {
     uri::join scheme http query abc=def&ghi=jkl host www.test.net path /path/
 } http://www.test.net/path/?abc=def&ghi=jkl
+
 test uri-2.4 {uri::join - https w/- query} {
     uri::join scheme https query abc=def&ghi=jkl host www.test.net path /path/
 } https://www.test.net/path/?abc=def&ghi=jkl
+
 test uri-2.5 {uri::join - http w/- port} {
     uri::join scheme http port 8080 host www.test.net path /path/
 } http://www.test.net:8080/path/
+
 test uri-2.6 {uri::join - https w/- port} {
     uri::join scheme https port 8888 host www.test.net path /path/
 } https://www.test.net:8888/path/
+
 test uri-2.7 {uri::join - ftp} {
     uri::join host ftp.test.net path /my/file scheme ftp
 } ftp://ftp.test.net/my/file
+
 test uri-2.8 {uri::join - identity function} {
     eval uri::join [uri::split http://www.w3.org/XML/?abc=def]
 } http://www.w3.org/XML/?abc=def
+
 test uri-2.9 {uri::join - ftp userinfo check} {
     eval uri::join scheme ftp host localhost port 21 path /filename user user pwd passwd
 } {ftp://user:passwd@localhost:21/filename}
+
 test uri-2.10 {uri::join - ftp userinfo check with no passwd} {
     eval uri::join scheme ftp host localhost path /filename user user
 } {ftp://user@localhost/filename}
-test uri-2.10 {uri::join - ftp path prefix} {
-    eval uri::join scheme ftp host localhost path filename
-} ftp://localhost/filename
+
+test uri-2.11 {uri::join - ftp path prefix} {
+    eval uri::join scheme ftp host localhost path a/b/c.d
+} ftp://localhost/a/b/c.d
+
+test uri-2.12 {uri::join - ftp w/- image type} {
+    eval uri::join scheme ftp host localhost path a/b/c.d type i
+} {ftp://localhost/a/b/c.d;type=i}
+
+test uri-2.13 {uri::join - ftp w/- ascii type} {
+    eval uri::join scheme ftp host localhost path a/b/c.d type a
+} {ftp://localhost/a/b/c.d;type=a}
+
+# I am not sure that this shouldn't produce an error. The semi-colon is 
+# reserved so in this case with an invalid suffix the semi-colon should
+# probably be quoted. [PT]
+test uri-2.14 {uri::join - ftp w/- invalid type} {
+    eval uri::join scheme ftp host localhost path a/b/c.d type X
+} {ftp://localhost/a/b/c.d;type=X}
+
+# -------------------------------------------------------------------------
 
 test uri-3.1 {uri::resolve - relative URL, base trailing slash} {
     uri::resolve http://www.w3.org/path/ test.html
 } http://www.w3.org/path/test.html
+
 test uri-3.2 {uri::resolve - relative URL path, base trailing slash} {
     uri::resolve http://www.w3.org/path/ relpath/test.html
 } http://www.w3.org/path/relpath/test.html
+
 test uri-3.3 {uri::resolve - relative URL, base no trailing slash} {
     uri::resolve http://www.w3.org/path test.html
 } http://www.w3.org/test.html
+
 test uri-3.4 {uri::resolve - relative URL path, base no trailing slash} {
     uri::resolve http://www.w3.org/path relpath/test.html
 } http://www.w3.org/relpath/test.html
+
 test uri-3.5 {uri::resolve - relative URL w/- query} {
     uri::resolve http://www.w3.org/path/ test.html?abc=def
 } http://www.w3.org/path/test.html?abc=def
+
 test uri-3.6 {uri::resolve - absolute URL} {
     uri::resolve http://www.w3.org/path/ http://test.net/test.html
 } http://test.net/test.html
 
+# -------------------------------------------------------------------------
+
+# NB: This test fails on windows as there is an extra character for each
+#     line (\n -> \r\n) thus filesize of 210 is a read size of 207 [PT]
 test uri-4.1 {uri::geturl} {
     set token [uri::geturl file://[file join [pwd] ${::dirname} pkgIndex.tcl]]
     expr {[string length [lindex [array get $token data] 1]]}
 } [file size [file join [pwd] $::dirname pkgIndex.tcl]]
+
+# -------------------------------------------------------------------------
 
 test uri-5.1 {uri::canonicalize} {
     uri::canonicalize http://www.test.net/path1/./remove/../path2/resource
@@ -112,5 +168,13 @@ test uri-5.2 {uri::canonicalize infinite loop} {
     uri::canonicalize http://www.test.net/../path2/resource
 } {http://www.test.net/path2/resource}
 
+# -------------------------------------------------------------------------
+
 ::tcltest::cleanupTests
 return
+
+# -------------------------------------------------------------------------
+# Local Variables:
+#   mode: tcl
+#   indent-tabs-mode: nil
+# End:
